--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<p>This is a new Reop.</p>
+<p>This is a new Repo.</p>
 <p>this is the feature branch (dropdown)</p>
 <p>this is the feature branch (button)</p>
